--- a/hello.html
+++ b/hello.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h2> I Am Fine </h2>
-    <div>
+    <div style="color:red;">
         Hello How Are You?
     </div>
     Hello , World
